--- a/.github/workflows/daily-ai-news.yml
+++ b/.github/workflows/daily-ai-news.yml
@@ -19,11 +19,11 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install perplexityai
+        run: pip install openai feedparser
 
       - name: Fetch AI news
         env:
-          PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python scripts/fetch_ai_news.py
 
       - name: Commit and push
