Update cron schedule for daily AI news workflow

--- a/.github/workflows/daily-ai-news.yml
+++ b/.github/workflows/daily-ai-news.yml
@@ -2,7 +2,7 @@ name: Daily AI News
 
 on:
   schedule:
-    - cron: "30 23 * * *"  # 5:00 AM IST (11:30 PM UTC)
+    - cron: "0 0 * * *"  # 5:30 AM IST (00:00 UTC)
   workflow_dispatch:
 
 jobs:
